<resources>
    <string name="app_name">LungXcan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_disease">Disease</string>
    <string name="title_scan">Scan</string>
    <string name="title_article">Article</string>
    <string name="title_setting">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_image">Choose Image</string>
    <string name="lung_image">Lung Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="analyze">Analyze</string>
    <string name="result">Result</string>
    <string name="article_thumbnail">Article Thumbnail</string>
    <string name="hospital_image">Hospital Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="title_signup_page">Test</string>
    <string name="dummy_article">
        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    </string>
    <string name="share">Share</string>
    <string name="read_more">READ MORE</string>
    <string name="open_in_maps">Open In Maps</string>
    <string name="scan_history">Scan History</string>
    <string name="classifier_failed">Image classifier failed</string>
    <string name="result_high">The analysis indicates a high probability of lung disease. We recommend consulting a doctor immediately.</string>
    <string name="result_low">The analysis indicates a low probability of lung disease.
Preventive care is essential, so we\'ve included some
resources below to help you maintain healthy lungs </string>
    <string name="recommend_title_high">Nearby Hospitals</string>
    <string name="recommend_title_low">Read Articles</string>
    <string name="disease_info">Disease Info</string>
    <string name="scan_availability">Scan Availability:</string>
    <string name="click_here_to_learn_more">Click here to learn more</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="input_your_name">Input your name</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_your_password">Input your password</string>
    <string name="try_again">Try Again</string>
    <string name="lung_disease_101">Lung Disease 101</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="application_settings">Application Settings</string>
    <string name="change_language">Change Language</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="no_article_found">No articles found for this disease</string>
    <string-array name="disease_names" translatable="false">
        <item>Asbestosis</item>
        <item>COVID-19</item>
        <item>Pulmonary Fibrosis</item>
        <item>Pleural Thickening</item>
        <item>Pneumonia</item>
        <item>Tuberculosis</item>
        <item>Lung Cancer</item>
    </string-array>
    <string-array name="disease_pictures" translatable="false">
        <item>https://www.lung.ca/sites/default/files/images/2023-02/8005710939_d877659655_c.jpg</item>
        <item>https://unair.ac.id/wp-content/uploads/2022/11/Coronavirus-CDC-1.jpg</item>
        <item>https://www.pulmonaryfibrosis.org/images/default-source/default-album/normal-gas-exchange-impaired-gas-exchange_bordera1533bc1c552488bb072b028b5ed8d93.png?sfvrsn=d40173d9_2</item>
        <item>https://www.mesolawsuitafterdeath.com/wp-content/uploads/2019/10/Pleural-thickening.png</item>
        <item>https://ehcebwm3f3o.exactdn.com/wp-content/uploads/Pneumonia-picture-amit-patel-scaled.jpeg?strip=all&amp;lossy=1&amp;ssl=1</item>
        <item>https://my.clevelandclinic.org/-/scassets/images/org/health/articles/11301-tuberculosis</item>
        <item>https://my.clevelandclinic.org/-/scassets/images/org/health/articles/4375-lung-cancer</item>
    </string-array>
    <string-array name="disease_availability" translatable="false">
        <item>NOT READY</item>
        <item>READY</item>
        <item>READY</item>
        <item>READY</item>
        <item>READY</item>
        <item>READY</item>
        <item>READY</item>
    </string-array>
    <string-array name="disease_links" translatable="false">
        <item>https://www.lung.ca/lung-health/lung-diseases/asbestosis</item>
        <item>https://www.cdc.gov/coronavirus/2019-nCoV/index.html</item>
        <item>https://www.healthdirect.gov.au/pulmonary-fibrosis</item>
        <item>https://www.asbestos.com/mesothelioma/pleural-thickening/</item>
        <item>https://my.clevelandclinic.org/health/diseases/4471-pneumonia</item>
        <item>https://my.clevelandclinic.org/health/diseases/11301-tuberculosis</item>
        <item>https://www.healthdirect.gov.au/lung-cancer</item>
    </string-array>
    <string-array name="disease_definitions">
        <item>Asbestosis is a chronic lung disease caused by inhaling asbestos fibers. Asbestos, a heat-resistant mineral, was widely used in products like insulation, vinyl floor tiles, cement, and brake linings until its manufacture and use were banned by the federal government in 2018. Asbestos is a known human carcinogen linked to lung and ovarian cancers and mesothelioma. While asbestosis itself is not cancer, it raises the risk of developing asbestos-related cancers.</item>
        <item>COVID-19, caused by the virus SARS-CoV-2, is highly contagious and has led to over one million deaths in the United States. It primarily causes respiratory symptoms similar to a cold, flu, or pneumonia but can also affect other parts of the body. While most people experience mild symptoms, some can become severely ill.</item>
        <item>Pulmonary fibrosis is a lung disease. The tissue around the air sacs of the lungs (known as alveoli) becomes damaged, thickened, and scarred. As the lungs scar and stiffen, breathing becomes more difficult. It can mean that not enough oxygen enters your blood.</item>
        <item>Pleural thickening is irritated and inflamed tissue in the lining of the lungs or pleural membrane. This thickening is the result of scarring (fibrosis) on the pleural membrane from long-term (chronic) inflammation.</item>
        <item>Pneumonia is an infection in your lungs caused by bacteria, viruses, or fungi. Pneumonia causes your lung tissue to swell (inflammation) and can cause fluid or pus in your lungs. Bacterial pneumonia is usually more severe than viral pneumonia, which often resolves on its own.</item>
        <item>Tuberculosis is an infectious disease that can cause infection in your lungs or other tissues. It commonly affects your lungs, but it can also affect other organs like your spine, brain, or kidneys.</item>
        <item>Lung cancer occurs when abnormal lung cells grow uncontrollably, either originating in the lungs (primary) or spreading from other body parts (secondary). It is the leading cause of cancer-related deaths in Australia and is often diagnosed late due to lack of early symptoms.</item>
    </string-array>
    <string-array name="disease_symptoms">
        <item>- Feeling short of breath.\n- Dry cough\n- Chest pain</item>
        <item>- Fever or chills\n- Cough\n- Shortness of breath or difficulty breathing\n- Fatigue\n- Muscle or body aches\n- Headache\n- New loss of taste or smell\n- Sore throat\n- Congestion or runny nose\n- Nausea or vomiting\n- Diarrhea</item>
        <item>- Shortness of breath, initially during activity and later at rest.\n- Persistent dry cough.\n- Fatigue.\n- Weight loss.\n- Loss of appetite.\n- Clubbing of fingers or toes (bulging fingertips).\n- Joint and muscle pain.</item>
        <item>- Breathlessness.\n- Chest pain.\n- Coughing.\n- Fever (in some cases).</item>
        <item>- High fever (up to 105 F or 40.55 C).\n- Cough with yellow, green or bloody mucus.\n- Tiredness (fatigue).\n- Rapid breathing.\n- Shortness of breath.\n- Rapid heart rate.\n- Sweating or chills.\n- Chest pain and/or abdominal pain, especially with coughing or deep breathing.\n- Loss of appetite.\n- Bluish skin, lips or nails (cyanosis).\n- Confusion or altered mental state.</item>
        <item>- Bad cough (lasting longer than two weeks).\n- Pain in your chest.\n- Coughing up blood or sputum (mucus).\n- Fatigue or weakness.\n- Loss of appetite.\n- Weight loss.\n- Chills.\n- Fever.\n- Night sweats.</item>
        <item>- A persistent, new cough (lasting more than 3 weeks).\n- A change in an existing cough\n- Breathlessness\n- Chest or shoulder pain\n- A chest infection that does not go away (after 3 weeks) or keeps coming back\n- Coughing or spitting up blood</item>
    </string-array>
</resources>