<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_disease"
        android:title="@string/title_disease" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_camera_24"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_article_24"
        android:title="@string/title_article" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_setting" />

</menu>