<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.scan.ScanFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/choose_image"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_lung_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:contentDescription="@string/lung_image"
                android:src="@drawable/ic_image_24"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/materialButton2"
                app:layout_constraintTop_toBottomOf="@+id/iv_lung_image"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_gallery"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:layout_toStartOf="@+id/btn_camera"
                    android:backgroundTint="?attr/colorPrimaryInverse"
                    android:text="@string/gallery"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    app:cornerRadius="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_camera"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:width="140dp"
                    android:backgroundTint="?attr/colorPrimaryInverse"
                    android:text="@string/camera"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    app:cornerRadius="10dp" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_analyze"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:text="@string/analyze"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>